baml_language/crates/baml_lsp_actions_tests/test_files/syntax/class/unknown_type.baml
class InterfaceTwo {
  interface string
  prop2 Bar
}

// error: Type `Bar` does not exist. Did you mean one of these: `int`, `bool`, `float`, `true`, `false`, `string`, `InterfaceTwo`?
//   -->  class/unknown_type.baml:3
//    |
//  2 |   interface string
//  3 |   prop2 Bar
//    |

//----
//- diagnostics
// Error: Unknown type `Bar`
//    ╭─[ class_unknown_type.baml:3:8 ]
//    │
//  3 │   prop2 Bar
//    │        ──┬─  
//    │          ╰─── Unknown type `Bar`
//    │ 
//    │ Note: Error code: E0002
// ───╯
